--- a/src/components/burgerbar/style.css
+++ b/src/components/burgerbar/style.css
@@ -25,3 +25,15 @@
     font-size: 1.2rem;
     font-weight: bold;
 }
+
+.elements-container {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+.elements{
+    font-size: 30px;
+    text-decoration: none;
+    margin-top: 33%;
+}
