--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,26 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: '#F3ECFE';
-}
-
-.products-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1;
-  max-width: 1280px;
-  width: 100%;
+.button-cart {
+  cursor: pointer;
+  background-color: white;
+  padding: 1rem;
+  width: 85%;
   justify-content: center;
   align-items: center;
-  padding: 2rem 0;
+  text-align: center;
+  text-decoration: none;
+  font-size: large;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+.cart-container {
+  display: flex;
+  width: 100%;
+  height: 80%;
+  flex-direction: column;
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.button-cart:hover {
+  background-color: rgb(226, 226, 226);
 }
