--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -4,11 +4,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0.5rem;
     padding: 1rem;
+    margin: 0.5rem;
     width: 300px;
     min-height: 590px;
     border: 1px solid black;
+}
+.card:hover{
+    box-shadow: 0 1px 1.5px 0 black;
+    cursor: pointer;
 }
 .container-image{
     height: 300px;
