--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -25,3 +25,30 @@
     font-size: 1.2rem;
     font-weight: bold;
 }
+
+.button-cart {
+    cursor: pointer;
+    background-color: white;
+    padding: 1rem;
+    width: 85%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    font-size: large;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .cart-container {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    flex-direction: column;
+    flex: 1;
+    justify-content: flex-end;
+  }
+  
+  .button-cart:hover {
+    background-color: rgb(226, 226, 226);
+  }
